Created visually keyboard and styled buttons of confirm input

--- a/styles.css
+++ b/styles.css
@@ -24,14 +24,16 @@
 
 .title{
     color: white;
+    font-family: sans-serif;
     text-align: center;
 }
 
 .letter-box {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     margin: 5px;
-    border: 1px solid #000;
+    border: 3px solid #343434;
+    border-radius: 10px;
     text-align: center;
     line-height: 40px;
     font-size: 20px;
@@ -49,13 +51,81 @@
     margin: 5px;
 }
 
-button {
-    width: 35px;
-    height: 35px;
-    margin: 3px;
-    text-transform: uppercase;
+.enter-button{
+    display: inline-block;
+    padding: 10px 20px;
+    margin-top: 10px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #04AA6D;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
 }
 
+.enter-button:hover {background-color: #3e8e41}
+
+.enter-button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+.new-word-submit{
+    display: inline-block;
+    padding: 10px 20px;
+    margin-top: 10px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #dec803;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+}
+
+.disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+  }
+
 body {
-    background-color: #4e3bf8;
+    background-color: #6d6a85;
+    font-family: sans-serif;
+}
+
+.keyboard{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}   
+
+.keyboard__row {
+    display: flex;
+  }
+
+.keyboard__key{
+    display: block;
+    height: 40px;
+    width: 50px;
+    /* flex-grow: 1; */
+    text-align: center;
+    line-height: 40px;
+    font-family: sans-serif;
+    font-size: 30px;
+    margin: 5px;
+    border-radius: 5px;
+    background: white;
+}
+
+.keyboard__key.is-down{
+    background: #09f;
+    color: white;
 }
